refactor: 메서드 축약